--- a/ARQ/Base.lproj/Main.storyboard
+++ b/ARQ/Base.lproj/Main.storyboard
@@ -93,7 +93,7 @@
         <!--RH-LogView-->
         <scene sceneID="owa-z4-TNk">
             <objects>
-                <viewController id="Run-Ok-Ngb" userLabel="RH-LogView" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" id="Run-Ok-Ngb" userLabel="RH-LogView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="juT-r9-PNN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -102,12 +102,26 @@
                                 <rect key="frame" x="0.0" y="20" width="374" height="647"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iVY-Jg-yRi">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iVY-Jg-yRi" userLabel="log-back-button">
                                 <rect key="frame" x="22" y="52" width="24" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="log-back_button"/>
                                 <connections>
                                     <segue destination="sGK-wb-m1z" kind="show" animates="NO" id="hlx-qC-7EE"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LMN-md-6LH" userLabel="info-button">
+                                <rect key="frame" x="16" y="592" width="63" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="hf8-Rk-ovA" kind="presentation" id="nXb-rI-TpN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bGL-qC-eDU" userLabel="next-button">
+                                <rect key="frame" x="214" y="592" width="142" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="Dxg-Ne-oiy" kind="show" animates="NO" id="1jf-bC-C6R"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -118,6 +132,49 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rbL-DZ-5zR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1612" y="138.98050974512745"/>
+        </scene>
+        <!--General-LogView-->
+        <scene sceneID="ubU-kj-P7G">
+            <objects>
+                <viewController id="Dxg-Ne-oiy" userLabel="General-LogView" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AxL-pt-xZm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="log-general-background" translatesAutoresizingMaskIntoConstraints="NO" id="uMT-Ih-pBp">
+                                <rect key="frame" x="0.0" y="20" width="374" height="647"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="30" minValue="0.0" maxValue="60" translatesAutoresizingMaskIntoConstraints="NO" id="P1s-bf-nZh" userLabel="log-stiffness">
+                                <rect key="frame" x="53" y="455" width="259" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="minimumTrackTintColor" red="0.89562621269999998" green="0.4045359094" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vpe-ga-p5R" userLabel="log-back-button">
+                                <rect key="frame" x="22" y="52" width="24" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="log-back_button"/>
+                                <connections>
+                                    <segue destination="Run-Ok-Ngb" kind="show" animates="NO" id="JhT-wm-i3G"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W64-XX-9Sn" userLabel="next-button">
+                                <rect key="frame" x="214" y="592" width="142" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="Oq7-3E-4I9" userLabel="log-general">
+                                <rect key="frame" x="51" y="217" width="272" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="minimumTrackTintColor" red="0.89562621269999998" green="0.4045359094" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                            </slider>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="IMJ-FV-YQn"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z7l-jy-mp1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1596" y="918.89055472263874"/>
         </scene>
         <!--PopUpVC-->
         <scene sceneID="Pkd-M7-KL9">
@@ -146,7 +203,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="0.68019584760273977" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="0.74954516267123283" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="0Uo-k0-8hw"/>
                     </view>
                 </viewController>
@@ -161,9 +218,12 @@
         <image name="log-LH-background" width="1248" height="2216"/>
         <image name="log-RH-background" width="1248" height="2216"/>
         <image name="log-back_button" width="64" height="99"/>
+        <image name="log-general-background" width="1248" height="2216"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="0gO-fH-P6c"/>
+        <segue reference="1jf-bC-C6R"/>
+        <segue reference="nXb-rI-TpN"/>
+        <segue reference="JhT-wm-i3G"/>
         <segue reference="hlx-qC-7EE"/>
     </inferredMetricsTieBreakers>
 </document>
